# finance-foundation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Justfile  README.md  backend_check_pdf_2.py  backend_check_pdf_pages.py  demo_transacciones.csv  demo_transacciones.xlsx  demo_transactions.xlsx  package-lock.json  package.json
apps/backend/: .env.example  Dockerfile  README.md  backend_check_loop.py  backend_check_loop2.py  backend_check_loop3.py  backend_check_pdf.py  backend_check_pdf_pages.py  backend_check_pdf_text.py  out.txt  out2.txt  out_tables.txt  out_text.txt  parse_demo_pdf.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1d87292e4fd4_add_monthly_insight_recaps.py  30f246f1a52a_add_bank_name_to_accounts.py  36f049595730_add_user_credentials.py  4b58f2f9a21a_add_portfolio_tables_and_budget_periods.py  5f0f4f9d0e21_add_is_refund_to_transactions.py  8f6c9a1d2b34_add_auto_categorization_setting_and_remove_refunds.py  b1d2b4a7f9ce_drop_is_active_from_accounts.py  c8aa2f2ea97b_create_core_tables.py  eed3782eb47d_add_color_and_icon_to_accounts.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py  router.py
apps/backend/scripts/: compare_pdf_parsers.py  export_openapi.py  import_finance_tracker_dump.py  ocr_pdf_to_text.py  seed_demo.py
apps/backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_budgets.py  test_categories.py  test_health.py  test_insights.py  test_langfuse.py  test_monthly_recap.py  test_settings.py  test_slack.py  test_slack_docs.py  test_transactions.py
scripts/: demo-backend.sh  (+11 more)
(+154 files in other folders)
